--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <title>Ferdinan Law Firm & Partners</title>
+    <title>
+      Ferdinan Law Firm & Partner's - FLF - Firma Hukum (Law Firm) Jakarta
+    </title>
   </head>
   <body>
     <div id="root"></div>
