--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>
       Ferdinan Law Firm & Partner's - FLF - Firma Hukum (Law Firm) Jakarta
     </title>
+    <meta
+      name="google-site-verification"
+      content="FW9VGY0kXkGUoRNs70Q4ZR_FNvLmov9eP6IXpu7tbcc"
+    />
   </head>
   <body>
     <div id="root"></div>
