--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Ferdinan Law Firm & Partner’s (“FLF”) adalah firma hukum
+    Indonesia yang independen dan memberikan layanan hukum penuh
+    yang berbasis di jantung ibu kota Indonesia, yakni Jakarta."
+    />
+    <meta
+      name="keywords"
+      content="Ferdinan, FLF, Kantor Hukum, Law Firm, Firma Hukum, Indonesia, Jakarta, Jakarta Timur, Jatinegara"
+    />
+    <meta name="author" content="Ferdinan Law Firm & Partner's" />
     <link rel="icon" type="image" href="/src/assets/small-logo.png" />
     <meta
       name="viewport"
