--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       content="Ferdinan, FLF, Kantor Hukum, Law Firm, Firma Hukum, Indonesia, Jakarta, Jakarta Timur, Jatinegara"
     />
     <meta name="author" content="Ferdinan Law Firm & Partner's" />
-    <link rel="icon" type="image" href="/src/assets/Favicon.ico" />
+    <link
+      rel="icon"
+      type="image"
+      href="/src/assets/small-logo.png"
+      sizes="16x16 32x32 48x48 96x96 144x144"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
