--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       content="Ferdinan, FLF, Kantor Hukum, Law Firm, Firma Hukum, Indonesia, Jakarta, Jakarta Timur, Jatinegara"
     />
     <meta name="author" content="Ferdinan Law Firm & Partner's" />
-    <link rel="icon" type="image/png" href="/assets/small-logo.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://flf-ferdinanlawfirm.com//assets/small-logo.png"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
