--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="Ferdinan, FLF, Kantor Hukum, Law Firm, Firma Hukum, Indonesia, Jakarta, Jakarta Timur, Jatinegara"
+      content="Ferdinan, FLF, Law Firm, Firma Hukum, Pengacara, Konsultan Hukum, Bantuan Hukum, Jasa Hukum, Advokat, Law Firm di Indonesia, Firma Hukum di Indonesia, Pengacara di Indonesia, Konsultan Hukum di Indonesia, Bantuan Hukum di Indonesia, Jasa Hukum di Indonesia, Advokat di Indonesia, Law Firm di Jakarta, Firma Hukum di Jakarta, Pengacara di Jakarta, Konsultan Hukum di Jakarta, Bantuan Hukum di Jakarta, Jasa Hukum di Jakarta, Advokat di Jakarta, Law Firm di Jakarta Timur, Firma Hukum di Jakarta Timur, Pengacara di Jakarta Timur, Konsultan Hukum di Jakarta Timur, Bantuan Hukum di Jakarta Timur, Jasa Hukum di Jakarta Timur, Advokat di Jakarta Timur, Law Firm di Jatinegara, Firma Hukum di Jatinegara, Pengacara di Jatinegara, Konsultan Hukum di Jatinegara, Bantuan Hukum di Jatinegara, Jasa Hukum di Jatinegara, Advokat di Jatinegara, Litigasi, Non Litigasi, Hukum Korporasi, Hukum Kontrak, Hukum Perjanjian, Legal Due Diligence, Hubungan Industrial, Opini Hukum"
     />
     <meta name="author" content="Ferdinan Law Firm & Partner's" />
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
